# CertTwoViewPlanarTriangulation

./: CMakeLists.txt  README.md  basic_params.txt
cmake/: OptTwoPlanarTriangulationConfig.cmake.in  OptTwoPlanarTriangulationConfigVersion.cmake.in  setup_installation.cmake
examples/: CMakeLists.txt  example_base.cpp  example_comparison.cpp
include/: TwoViewPlanarCert.h  TwoViewPlanarDual.h  TwoViewPlanarSDP.h  TwoViewPlanarTypes.h  TwoViewPlanarUtils.h
src/: TwoViewPlanarCert.cpp  TwoViewPlanarDual.cpp  TwoViewPlanarSDP.cpp  TwoViewPlanarUtils.cpp
test/: CMakeLists.txt  experimentsHelper.cpp  experimentsHelper.h  generic_test.cpp
utils/: generatePointCloudPlanar.cpp  generatePointCloudPlanar.h  triangulationPlanar.cpp  triangulationPlanar.h
